feat: update page styles and components for improved UI
- Enhanced 404, About Us, Book, Contact, Gallery, Index, Menu pages with new color scheme and typography.
- Replaced SVG icons with Astro Icon components for consistency.
- Introduced a ThemeToggle component for dark/light mode switching.
- Updated global CSS variables for better theme management and styling.
- Refactored button styles to align with new design system.

--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@astrojs/alpinejs": "^0.4.9",
     "@astrojs/mdx": "^4.3.13",
+    "@iconify-json/lucide": "^1.2.86",
     "@playform/inline": "^0.1.2",
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.18",
     "@types/alpinejs": "^3.13.11",
     "alpinejs": "^3.15.4",
     "astro": "^5.16.15",
+    "astro-icon": "^1.1.5",
     "fontace": "^0.3.1",
     "glightbox": "^3.3.1",
     "masonry-layout": "^4.2.2",
